---------------------------------------------------------------------------------------------------
Version: 0.69.26
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.25
Date: 2025-05-24
  Changes:
    - Alien Biomes compatibility
    - Fixed promethium sci techs.... again again!
    - Added rubia sci to corrundum's infinite research speed.
    - Added emergency failsafe to un-fuck save files messed up by alien biomes before. Use this console command: /c __rubia__ rubia.emergency_failsafes.clear_rubia_entities_from_nauvis()
---------------------------------------------------------------------------------------------------
Version: 0.69.24
Date: 2025-05-23
  Changes:
    - First biorecycling recipe nerfed to give -25% copper.
    - Updated trashsteroid factoriopedia entry.
    - Some people were just placing repair kits with no turrets! Can you believe that? So now trashsteroid damage is RNG'd to have a small chance of landing a CRITICAL HIT! Now Rubia is just like a real RPG! :) :) :) A trashsteroid rolls for a critical hit ONCE to damage anything in its range--it does not roll separately.
---------------------------------------------------------------------------------------------------
Version: 0.69.23
Date: 2025-05-23
  Changes:
    - Fixed compatibility issue with ruins mods placing splitters on Rubia.
  Balancing:
    - Buffed pole steel yield.
---------------------------------------------------------------------------------------------------
Version: 0.69.22
Date: 2025-05-23
  Changes:
    - Aircraft space age mod compatibility.
  Balancing:
    - Crapapult cheaper.
    - First Rubia tech is cheaper.
---------------------------------------------------------------------------------------------------
Version: 0.69.21
Date: 2025-05-23
  Changes:
    - Banned Quantum Fabricator's dedigitizer reactor, for teleporting items.