@@ -2,6 +2,8 @@
 Version: 0.69.26
 Date: ????
   Changes:
+    - Fixed a MAJOR bug that stopped trashsteroids from spawning. I also added a failsafe to hopefully stop it from happening again, and fix anyone's save files.
+    - Added some public debugging functions for trashsteroids.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.25
 Date: 2025-05-24
